# zk-student-lib

./: .env  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/zk-student/: Cargo.toml
crates/zk-student-wasm/: Cargo.toml
crates/zk-student-wasm/src/: lib.rs
crates/zk-student/examples/: README.md  gen_pem.rs
crates/zk-student/src/: lib.rs  mock.rs
crates/zk-student/src/cert/: error.rs  mod.rs  parser.rs  verify.rs
crates/zk-student/tests/: fixtures.rs  test_with_consts.rs
