[package]
name = "zk-student-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
zk-student       = { path = "../zk-student", features = ["verify", "std"] }
wasm-bindgen     = "0.2"
serde            = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
rsa              = { version = "0.9", features = ["sha1"] }
getrandom        = { version = "0.2", features = ["js"] }
